# aws-ai-evals

./: .gitignore  AGENTS.md  README.md  profile.md
apps/ryanprasad-chatbot/backend/: pyproject.toml
apps/ryanprasad-chatbot/backend/src/chatbot_api/: __init__.py  bedrock.py  eval_tools.py  handler.py  prompting.py  rate_limit.py  response_contract.py  settings.py  sources.py
apps/ryanprasad-chatbot/backend/tests/: test_eval_tools.py  test_handler.py  test_prompting.py  test_rate_limit.py  test_response_contract.py  test_sources.py
content/: profile.md
docs/: architecture.md  aws-ai-evals-learning-plan.md  dataset-contracts.md  eval-gates.md  evaluability-design-doc.md  ryanprasad-ai-chatbot-implementation-plan.md  ryanprasad-ai-chatbot-runbook.md  ryanprasad-ai-chatbot.md  security-preflight.md  week-04-model-evals-first-run.md  week-04-model-evals-runbook.md  week-05-judge-model-plan.md
rubrics/: citation-support.md  completeness.md  correctness.md  evidence-strength-calibration.md  refusal-appropriateness.md
schemas/: bedrock-model-eval-byoi.schema.json  candidate-chat-turn.schema.json  captured-response.schema.json  chat-response.schema.json  citation-array.schema.json  eval-example.schema.json  evidence-strength.schema.json  human-label.schema.json  judge-output.schema.json  model-eval-prompt-dataset.schema.json  rag-retrieval-only-byoi.schema.json  rag-retrieve-generate-byoi.schema.json  recruiter-evidence-qa.schema.json  refusal-outcome.schema.json  run-manifest.schema.json
scripts/: bedrock_byoi_adapter.py  bedrock_preflight.py  dataset_workbench.py  (+16 more)
(+85 files in other folders)
